--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "travel_advisor",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ndenysenko.github.io/travel_advisor/",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -12,6 +13,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "gh-pages": "^3.2.3",
     "google-map-react": "^2.1.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -21,6 +23,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
